# c2512

./: FuckYou  PalindromeOrNot  case study
Day1/: PalindromeOrNot
Delivery_interview_mock_Qstns/: set01.txt  set02.txt  set03.txt
Evaluation/: AirlineTicketBookingDb.cpp  Dbms.txt  ProgramFundamentals.cpp
Evaluation3/Task1/: pgm01.cpp  pgm02.cpp  pgm03.cpp  pgm04.cpp  pgm05.cpp
Evaluation3/Task2/: pgm02.cpp  prg01.cpp
Evaluation_2/: LabTest_crud.cpp  Task_using_Vim.txt
Evaluation_2/Portfolio/: index.html  responsive_style.css  style.css
Linux/: 03-ans.txt  04-ans.txt  LabTest_crud.cpp
Oraclesql/: emp_db.sql
Phase 1/Day04/: HighestOf10Nums.cpp
Phase 1/Day07/: emp.sql
Phase 1/Day08/: Subquery.sql
Phase 1/Day1/: SumOfDigits.cpp
Phase 1/Day11/: sp_create_emp_.sql
Phase 1/Day12/: Deoartments_crud.cpp
Phase 1/Day13/: Linux_cmds.txt
Phase 1/Day2/: GenerateNums.cpp
Phase 1/Day23/: Task1.cpp  Task2.cpp  Task3.cpp
Phase 1/Day5/: Keys.txt
Phase2/: Questions_Answers.txt  diss.txt  proj  project  w  works
Phase2_Evaluation1/: Interview_qstns.txt  Task1.cpp  Task2.cpp
Programs/: DivisibleByThreeCode  DivisibleByThreeCode.cpp  DivisibleByThreePseudocode  FindHighestNumber.cpp  FindSumOfDigits.cpp  PalindromeCode  PalindromeCode.cpp  PalindromePseudocode  PerfectNumberCode  PerfectNumberCode.cpp  PerfectNumberPseudocode  PrimeNumberPseudocode  PrimeOrNotCode  PrimeOrNotCode.cpp
SystemStatLoggingMicroservice/: CMakeLists.txt
SystemStatLoggingMicroservice/source/: client.cpp  server.cpp
SystemStatLoggingMicroservice/test/: test_system_stats.cpp
(+68 files in other folders)
